# helpmybarber

./: .gitignore  Cargo.toml  README.md  nixpacks.toml  railway.toml  run-all-tests.sh  start.sh  todos.txt
backend/: Cargo.toml  build_rs_cov.profraw  nixpacks.toml  prompts.toml  railway.toml
backend/src/: config.rs  main.rs
backend/src/services/: gemini.rs  mod.rs  prompts.rs
web/: jest.config.js  jest.setup.js  package-lock.json  package.json  vercel.json
web/src/__tests__/: integration.test.tsx
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/__tests__/: page.test.tsx
web/src/components/: ImageUpload.tsx  ResultsDisplay.tsx
web/src/components/__tests__/: ImageUpload.test.tsx  ResultsDisplay.test.tsx
web/src/lib/: api.ts
web/src/lib/__tests__/: api.test.ts
web/src/utils/: imageCompression.ts  validation.ts
web/src/utils/__tests__/: imageCompression.test.ts  validation.test.ts
