[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
axum-test = "15.0"