[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
serde_json = "1.0"
base64 = "0.22"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
http = "1.0"